--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -248,14 +248,15 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var highlightExpression = "$[project id] == '"+project["project id"]+"'";
 			self.map.clearHighlights(self.stylelayers["Project Locations"].guid);
 			self.map.addHighlight(self.stylelayers["Project Locations"].guid,{expression: highlightExpression});
-    	var image = "";
-    	if(self.project_ids[project["project id"]] !== undefined && self.project_ids[project["project id"]]["Results Image"].length != 0 ) {
+    	var image = "", blurb = "";
+    	if(self.project_ids[project["project id"]] !== undefined) {
+    		if(self.project_ids[project["project id"]]["Results Image"].length != 0 ) {
     	    		image = "<img src='" + self.project_ids[project["project id"]]["Results Image"] + "' id='project_image' alt='Project Image'/>"
     	    }
-    	var blurb = "";
     	if(self.project_ids[project["project id"]]["Results Blurb"] !== undefined) {
     	    		blurb = self.project_ids[project["project id"]]["Results Blurb"];
     	    }
+    	}
         var html = tmpl(info_templates.project, 
                             {	image: image,
                             	results_blurb: blurb,
