Fixing image and results blurbs when the project doesn't have this info.

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -258,7 +258,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
     	    }
     	}
     	var icon = "";
-    	if (self.sectors[self.sector_names[project["mjsector 1"] !== undefined) {
+    	if (project["mjsector 1"] !== undefined) {
     		icon = self.sectors[self.sector_names[project["mjsector 1"].toLowerCase().trim()]].icon;
     	}
         var html = tmpl(info_templates.project, 
