--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -248,15 +248,19 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var highlightExpression = "$[project id] == '"+project["project id"]+"'";
 			self.map.clearHighlights(self.stylelayers["Project Locations"].guid);
 			self.map.addHighlight(self.stylelayers["Project Locations"].guid,{expression: highlightExpression});
-    	var image = "", blurb = "";
-    	if(self.project_ids[project["project id"]] !== undefined) {
+    	var image = "", blurb = "",links = "";
+    		if(self.project_ids[project["project id"]] !== undefined) {
     		if(self.project_ids[project["project id"]]["Results Image"].length != 0 ) {
     	    		image = "<img src='" + self.project_ids[project["project id"]]["Results Image"] + "' id='project_image' alt='Project Image'/>"
     	    }
-    	if(self.project_ids[project["project id"]]["Results Blurb"] !== undefined) {
+    		if(self.project_ids[project["project id"]]["Results Blurb"] !== undefined) {
     	    		blurb = self.project_ids[project["project id"]]["Results Blurb"];
     	    }
+    		if(self.project_ids[project["project id"]]["Results Stories"] !== undefined && self.project_ids[project["project id"]]["Results Stories"].length != 0 ) {
+    			links += "\n<a href='" + self.project_ids[project["project id"]]["Results Stories"] +"'>Results Story</a>";
+    		}
     	}
+
     	var icon = "";
     	if (project["mjsector 1"] !== undefined) {
     		icon = self.sectors[self.sector_names[project["mjsector 1"].toLowerCase().trim()]].icon;
@@ -265,6 +269,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
                             {	image: image,
                             	results_blurb: blurb,
                             	icon: icon,
+                            	links: links,
                             	title: project["project title"],sector: project["mjsector 1"],adm1: project["adm1"], adm2: project["adm2"], project_id: project["project id"], geoname: project["geoname"], 
                             precision_description: project["precision description"], development_objective: project["development objective"], results: project["results"]  });
 
